...
    <string name="remote_services_heading">Services</string>
    <string name="connectors_title">Connectors</string>
    <string name="connectors_device_section">On this device</string>
    <string name="connector_status_connected">Connected</string>
    <string name="connector_about">About this connector</string>
    <string name="connector_about_title">About %1$s</string>
    <string name="connector_add_permission">Add</string>
    <string name="connector_detail_connect_summary">Connect to enable this service.</string>
    <string name="connector_status_reauthorize">Reauthorize</string>
    <string name="connector_status_error">Error</string>
    <string name="connector_status_permission_pending">Permission pending</string>
    <string name="remote_service_connecting_short">Connecting</string>
    <string name="remote_service_open_documentation">Service documentation</string>
    <string name="connector_section_access">Access</string>
    <string name="connector_section_privacy">Privacy</string>
    <string name="connector_section_endpoint">Endpoint</string>
    <string name="connector_section_tools">Tools</string>
    <string name="connector_advanced">Advanced</string>
    <string name="connector_show">Show</string>
    <string name="connector_collapse">Hide</string>
    <string name="connector_operation_access_heading">Access: %1$s</string>
    <string name="connector_disconnect_confirm_title">Disconnect %1$s?</string>
    <string name="remote_service_github">GitHub</string>
    <string name="remote_service_notion">Notion</string>
...
